--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1 style="background-color:powderblue;">Head Title</h1>
-<p style="background-color:tomato;">This is a paragraph.</p>
+<h1>Head Title</h1>
+<p>This is a paragraph.</p>
 </body>
 </html>
